tests/sema/fail/v5_fail_array_len_field.ep
# COMPILE_FAIL_CONTAINS: unknown field i64[].len

fun main(): void {
    let xs = new i64[]
    let n = xs.len
}
